apps/influxdb/influxdb-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb-route
  namespace: influxdb
spec:
  routes:
    - match: HostRegexp(`influxdb.{domain:[a-z\.]+}`)
      kind: Rule
      services:
        - name: influxdb
          port: 8086
